Make the project compliant with REUSE
Signed-off-by: Suguru Hirahara <acioustick@noreply.codeberg.org>

--- a/templates/env.j2
+++ b/templates/env.j2
@@ -1,3 +1,9 @@
+{#
+SPDX-FileCopyrightText: 2024 Nikita Chernyi
+
+SPDX-License-Identifier: AGPL-3.0-or-later
+#}
+
 ADMIN_EMAIL={{ freescout_admin_email }}
 ADMIN_PASS={{ freescout_admin_password }}
 
