--- a/templates/labels.j2
+++ b/templates/labels.j2
@@ -21,7 +21,7 @@ traefik.http.middlewares.{{ freescout_identifier }}-slashless-redirect.redirectr
 
 {#
 	Intentionally not adding a stripPrefix middleware.
-	freescout seems to serve itself under the same prefix it sees in the BASE_URL environment variable.
+	FreeScout seems to serve itself under the same prefix it sees in the BASE_URL environment variable.
 #}
 
 {% if freescout_container_labels_traefik_additional_response_headers.keys() | length > 0 %}
