--- a/templates/systemd/freescout.service.j2
+++ b/templates/systemd/freescout.service.j2
@@ -29,6 +29,9 @@ ExecStartPre={{ devture_systemd_docker_base_host_command_docker }} create \
       --mount type=bind,src={{ freescout_data_path }},dst=/data \
       --mount type=bind,src={{ freescout_logs_path }},dst=/www/logs \
       --mount type=bind,src={{ freescout_modules_path }},dst=/assets/modules \
+      {% for volume in freescout_container_additional_volumes %}
+      --mount type={{ volume.type | default('bind' if '/' in volume.src else 'volume') }},src={{ volume.src }},dst={{ volume.dst }}{{ (',' + volume.options) if volume.options else '' }} \
+      {% endfor %}
       {% for arg in freescout_container_extra_arguments %}
       {{ arg }} \
       {% endfor %}
