--- a/templates/systemd/freescout.service.j2
+++ b/templates/systemd/freescout.service.j2
@@ -11,6 +11,9 @@ Description=FreeScout ({{ freescout_identifier }})
 Requires={{ service }}
 After={{ service }}
 {% endfor %}
+{% for service in freescout_systemd_wanted_services_list %}
+Wants={{ service }}
+{% endfor %}
 DefaultDependencies=no
 
 [Service]
