--- a/templates/labels.j2
+++ b/templates/labels.j2
@@ -24,11 +24,18 @@ traefik.http.middlewares.{{ freescout_identifier }}-slashless-redirect.redirectr
   FreeScout seems to serve itself under the same prefix it sees in the BASE_URL environment variable.
 #}
 
+{% if freescout_container_labels_traefik_additional_request_headers.keys() | length > 0 %}
+{% for name, value in freescout_container_labels_traefik_additional_request_headers.items() %}
+traefik.http.middlewares.{{ freescout_identifier }}-add-request-headers.headers.customrequestheaders.{{ name }}={{ value }}
+{% endfor %}
+{% set middlewares = middlewares + [freescout_identifier + '-add-request-headers'] %}
+{% endif %}
+
 {% if freescout_container_labels_traefik_additional_response_headers.keys() | length > 0 %}
 {% for name, value in freescout_container_labels_traefik_additional_response_headers.items() %}
-traefik.http.middlewares.{{ freescout_identifier }}-add-headers.headers.customresponseheaders.{{ name }}={{ value }}
+traefik.http.middlewares.{{ freescout_identifier }}-add-response-headers.headers.customresponseheaders.{{ name }}={{ value }}
 {% endfor %}
-{% set middlewares = middlewares + [freescout_identifier + '-add-headers'] %}
+{% set middlewares = middlewares + [freescout_identifier + '-add-response-headers'] %}
 {% endif %}
 
 traefik.http.routers.{{ freescout_identifier }}.rule={{ freescout_container_labels_traefik_rule }}
