--- a/templates/labels.j2
+++ b/templates/labels.j2
@@ -14,7 +14,7 @@ traefik.docker.network={{ freescout_container_labels_traefik_docker_network }}
 {% set middlewares = [] %}
 
 {% if freescout_container_labels_traefik_path_prefix != '/' %}
-traefik.http.middlewares.{{ freescout_identifier }}-slashless-redirect.redirectregex.regex=({{ freescout_container_labels_traefik_path_prefix | quote }})$
+traefik.http.middlewares.{{ freescout_identifier }}-slashless-redirect.redirectregex.regex=^({{ freescout_container_labels_traefik_path_prefix | quote }})$
 traefik.http.middlewares.{{ freescout_identifier }}-slashless-redirect.redirectregex.replacement=${1}/
 {% set middlewares = middlewares + [freescout_identifier + '-slashless-redirect'] %}
 {% endif %}
