Add environment variable for timezone
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/templates/env.j2
+++ b/templates/env.j2
@@ -4,6 +4,8 @@ SPDX-FileCopyrightText: 2024 Nikita Chernyi
 SPDX-License-Identifier: AGPL-3.0-or-later
 #}
 
+TZ={{ freescout_environment_variables_tz }}
+
 ADMIN_EMAIL={{ freescout_admin_email }}
 ADMIN_PASS={{ freescout_admin_password }}
 
