Update configuration for Traefik's additional labels
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/templates/labels.j2
+++ b/templates/labels.j2
@@ -55,4 +55,6 @@ traefik.http.routers.{{ freescout_identifier }}.tls.certResolver={{ freescout_co
 traefik.http.services.{{ freescout_identifier }}.loadbalancer.server.port=80
 {% endif %}
 
-{{ freescout_container_labels_additional_labels }}
+{% for arg in freescout_container_labels_additional_labels %}
+{{ arg }}
+{% endfor %}
